🐛  Fixed unreadable HTML property colours in Night Shift mode (#885)
closes https://github.com/TryGhost/Ghost/issues/9080

- increase lightness of the default CodeMirror html property colour

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -333,3 +333,7 @@ input,
 .CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
     background: rgba(255, 0, 0, .30);
 }
+
+.CodeMirror .CodeMirror-code .cm-string {
+    color: color(#183691 l(+25%));
+}
